kubernetes/apps/default/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      strategy:
        type: Recreate
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/sonarr:4.0.15.2941-ls291@sha256:e00e87e0e7c24fdc992093756f120a6ab292790b6a637ff3641bf813091cd726
          ports:
            - containerPort: 8989
          livenessProbe:
            httpGet:
              path: /ping
              port: 8989
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: 8989
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          securityContext:
            allowPriviligeEscalation: false
            capabilities:
              drop:
                - NET_RAW
                - SYS_CHROOT
                - MKNOD
                - AUDIT_WRITE
          volumeMounts:
            - name: sonarr-data
              mountPath: /config
            - name: media
              mountPath: /data
          resources:
            requests:
              cpu: 100m
            # limits:
            #   memory: 1Gi
      volumes:
        - name: sonarr-data
          persistentVolumeClaim:
            claimName: sonarr-data-pvc
        - name: media
          nfs:
            server: 10.77.1.101
            path: /mnt/slow/media
            readOnly: false
