kubernetes/apps/default/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: default
spec:
  ports:
    - port: 8989
  selector:
    app: sonarr
  type: LoadBalancer
