kubernetes/apps/default/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: sonarr.mich-murphy.com
spec:
  ingressClassName: cilium
  rules:
    - host: sonarr.mich-murphy.com
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  number: 8989
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sonarr.mich-murphy.com
      secretName: sonarr-tls-secret
